--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -4,6 +4,13 @@
   display: flex;
   justify-content: center;
   gap: 30px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 50px auto;
+  }
 }
 
 .box {
@@ -17,40 +24,33 @@
   gap: 30px;
   text-align: center;
   text-decoration: none;
-}
 
-.box svg {
-  display: block;
-  font-size: clamp(3rem, 2vw, 4rem);
-  color: var(--text-color);
-  transition-duration: 0.1s;
-}
-
-.box span {
-  color: var(--text-color);
-  font-size: clamp(1.25rem, 1.6vw, 2rem);
-}
-
-.box:hover svg {
-  color: var(--main-color);
-}
-
-.box:hover span {
-  color: #acb6e5;
-  background: linear-gradient(135deg, var(--main-color), var(--sub-color));
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-@media (max-width: 768px) {
-  .main {
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-    margin: 50px auto;
+  & svg {
+    display: block;
+    font-size: clamp(3rem, 2vw, 4rem);
+    color: var(--text-color);
+    transition-duration: 0.1s;
   }
 
-  .box {
+  & span {
+    color: var(--text-color);
+    font-size: clamp(1.25rem, 1.6vw, 2rem);
+  }
+
+  &:hover {
+    & svg {
+      color: var(--main-color);
+    }
+
+    & span {
+      color: #acb6e5;
+      background: linear-gradient(135deg, var(--main-color), var(--sub-color));
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+
+  @media (max-width: 768px) {
     width: 60%;
     height: auto;
     padding: 30px 10px;
