--- a/src/styles/tableOfContent.module.css
+++ b/src/styles/tableOfContent.module.css
@@ -3,60 +3,57 @@
   margin-top: 80px;
   margin-right: 40px;
   font-size: 0.95rem;
-}
 
-.table-of-content > ul {
-  padding: 30px 0;
-  overflow-y: auto;
-  scrollbar-width: none;
-}
+  & > ul {
+    padding: 30px 0;
+    overflow-y: auto;
+  }
 
-.table-of-content ul {
-  position: sticky;
-  top: 15vh;
-  padding-left: 12px;
-  list-style: none;
-  margin-left: 2px;
-  max-height: 70vh;
-}
+  & ul {
+    position: sticky;
+    top: 15vh;
+    padding-left: 12px;
+    list-style: none;
+    margin-left: 2px;
+    max-height: 70vh;
 
-.table-of-content li {
-  margin-bottom: 8px;
-  line-height: 1.6;
-}
+    & li {
+      margin-bottom: 8px;
+      line-height: 1.6;
 
-.table-of-content li ul {
-  border-left: 1px solid #cdcdcd;
-}
+      & ul {
+        border-left: 1px solid #cdcdcd;
+      }
 
-.table-of-content li p {
-  margin-bottom: 8px;
-}
+      & p {
+        margin-bottom: 8px;
+      }
+    }
+  }
 
-.table-of-content a {
-  position: relative;
-  color: var(--text-color);
-}
+  & a {
+    position: relative;
+    color: var(--text-color);
 
-.table-of-content a:hover {
-  color: var(--post-link-color);
-}
+    &:hover {
+      color: var(--post-link-color);
+    }
+  }
 
-.table-of-content .active {
-  color: var(--post-link-color);
-}
+  .active {
+    color: var(--post-link-color);
 
-.table-of-content .active::before {
-  position: absolute;
-  content: "▶️";
-  font-size: 0.95rem;
-  top: 50%;
-  left: -18px;
-  transform: translateY(-50%);
-}
-
-@media (max-width: 768px) {
-  .table-of-content {
+    &::before {
+      position: absolute;
+      content: "▶️";
+      font-size: 0.95rem;
+      top: 50%;
+      left: -18px;
+      transform: translateY(-50%);
+    }
+  }
+  
+  @media (max-width: 768px) {
     display: none;
   }
 }
