--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -79,6 +79,7 @@
     box-shadow: 0 0 1.5px 1.5px #ddd;
 
     & p {
+      color: #888;
       margin: 0;
       line-height: 1.6;
     }
@@ -98,41 +99,39 @@
     margin: 40px 0;
   }
 
+  th {
+    border: 1px solid #bbb;
+    padding: 10px 15px;
+    background: var(--post-link-color);
+    color: #fff;
+    font-weight: 400;
+    line-height: 1.3;
+    vertical-align: middle;
+  }
+
+  td {
+    padding: 10px 20px;
+    border: 1px solid #bbb;
+    line-height: 1.3;
+  }
+
+  aside {
+    position: relative;
+    width: 85%;
+    margin-bottom: 20px;
+    padding: 18px 30px 18px 60px;
+    background-color: rgba(57, 106, 252, 0.15);
+    border-radius: 3px;
+    box-shadow: 0 0 1.5px 1.5px rgba(57, 106, 252, 0.25);
+
+    p {
+      margin: 0;
+      font-size: 0.95rem;
+      line-height: 1.6;
+    }
+  }
 }
 
-
-
-.blog-post th {
-  border: 1px solid #bbb;
-  padding: 10px 15px;
-  background: var(--post-link-color);
-  color: #fff;
-  font-weight: 400;
-  line-height: 1.3;
-  vertical-align: middle;
-}
-
-.blog-post td {
-  padding: 10px 20px;
-  border: 1px solid #bbb;
-  line-height: 1.3;
-}
-
-.blog-post aside {
-  position: relative;
-  width: 85%;
-  margin-bottom: 20px;
-  padding: 18px 30px 18px 60px;
-  background-color: rgba(57, 106, 252, 0.15);
-  border-radius: 3px;
-  box-shadow: 0 0 1.5px 1.5px rgba(57, 106, 252, 0.25);
-}
-
-.blog-post aside p {
-  margin: 0;
-  font-size: 0.95rem;
-  line-height: 1.6;
-}
 
 .blog-post aside::before {
   position: absolute;
